--- a/SpoutBolt/common.properties
+++ b/SpoutBolt/common.properties
@@ -1,3 +1,6 @@
+# kafka brokers (ips)
+brokers=192.168.40.97:9092,192.168.40.99:9092,192.168.40.101:9092
+
 # kafka topics where recorders in
 inTopics=szt
 
